# automation-practice

./: .env.example  README.md  demo.py  main.py  pyproject.toml  requirements.txt  utils.py
